# EBRAINS_RichEndpoint

./: CMakeLists.txt  LICENSE  README.md  global_settings.xml  launcher.py  launcher_hpc.py
Application_Companion/: affinity_manager.py  application_companion.py  application_companion_without_application_steering.py  application_manager.py  application_manager_without_steering.py  common_enums.py  cpu_usage.py  db_manager_file.py  memory_usage.py  ms_manager.py  process.py  resource_usage_monitor.py  resource_usage_summary.py  underlying_platform.py
application_companion/: affinity_manager.py  application_companion.py  application_manager.py  common_enums.py  cpu.py  cpu_usage.py  db_manager_file.py  memory_usage.py  process.py  resource_usage_monitor.py  underlying_platform.py
doxygen/: doxygen.cfg
orchestrator/: README.md  command_control_service.py  communication_endpoint.py  communicator_base.py  communicator_queue.py  communicator_zmq.py  control_command.py  health_status_keeper.py  health_status_monitor.py  orchestrator.py  proxy_manager_client.py  proxy_manager_server.py  routing_manager.py  service_component.py  service_registry.py  service_registry_adapter.py  service_registry_manager.py  signal_monitor.py  utils.py  zmq_sockets.py
python/: CMakeLists.txt  launcher.py  setup.py.in  timer.py
python/Application_Companion/: README.md  affinity_manager.py  application_companion.py  application_manager.py  argument_parser.py  common_enums.py  cpu.py  cpu_usage.py  db_manager_base.py  db_manager_file.py  memory_usage.py  ms_manager.py  process.py  resource_usage_monitor.py  resource_usage_summary.py  signal_manager.py  underlying_platform.py
python/Application_Companion/example/: naive_mxm.py
python/configuration_manager/: README.md  config_logger.py  configurations_manager.py  default_directories_enum.py  directories_manager.py  global_settings.xml  xml_parser.py
python/configuration_manager/example/: example_configurations_manager.py  example_settings.xml
python/configuration_manager/utils/: dictionary_utils.py  directory_utils.py
python/first/: second.py
python/first/third/: __init__.py
python/orchestrator/: command_control_service.py  command_steering_service.py  communicator_queue.py  health_status.py  health_status_keeper.py  health_status_monitor.py  orchestrator.py  poc_steering_menu.py  routing_manager.py  service_registry.py  service_registry_manager.py  signal_monitor.py  state_enums.py  steering_menu_cli.py  steering_menu_handler.py
registry_state_machine/: health_registry_manager.py  health_status.py  health_status_keeper.py  service_component.py  service_registry.py  state_transition_history.py  state_transition_record.py  state_transition_rules.py  state_transition_validator.py
script/: CMakeLists.txt  init.sh.in
src/: CMakeLists.txt  tutorial.cpp  tutorialconfig.h.in
src/cython_lib/: Makefile  __init__.py  _routines.hpp  _routines.pyx
src/lib/: CMakeLists.txt  MakeTable.cpp  Table.h  mysqrt.cpp
steering/: poc_steering_menu.py  steering_menu_cli.py  steering_menu_handler.py  steering_service.py
test/: CMakeLists.txt  env_test_runner.sh.in  python_unittest_runner.py
test/cython/: test_cython.py
test/python/: Test_configurations_manager.py  Test_configure_directories.py  Test_util.py  first.py
test/src_test/: CMakeLists.txt
